[package]
name = "tollgate-net"
description = "TollGate node — sells metered network access over IP (FIPS support later)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true
authors.workspace = true
default-run = "tollgate"

[[bin]]
name = "tollgate"
path = "src/main.rs"

[dependencies]
tollgate-core = { workspace = true }
tollgate-protocol = { workspace = true }
tokio = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
# Static-file serving for the persistent GET /portal SPA endpoint (index.html fallback).
tower-http = { version = "0.6", default-features = false, features = ["fs"] }
serde = { workspace = true }
serde_yaml = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = { workspace = true }
dirs = { workspace = true }
secp256k1 = { workspace = true }
cashu = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
# tolltop TUI (also pulls crossterm as its default backend).
ratatui = "0.29"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
