[package]
name = "tollgate-protocol"
description = "TollGate wire protocol: CBOR message types and canonical encoding (no_std)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
minicbor = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
